# rls

./: .travis.yml  Cargo.toml  Lazy IDE.md  azure-pipelines.yml
ci/: azure-install-rust.yml  azure-setup-toolchain.yml  azure-test.yml
editors/vscode/: package.json
rls-analysis/: Cargo.toml
rls-analysis/src/: analysis.rs  lowering.rs  raw.rs
rls-ipc/: Cargo.toml
rls-ipc/src/: client.rs  server.rs
rls-rustc/: Cargo.toml
rls-rustc/src/: clippy.rs  ipc.rs  lib.rs
rls/src/: config.rs
rls/src/actions/: hover.rs  requests.rs
rls/src/server/: dispatch.rs  mod.rs
src/: build.rs  cmd.rs  config.rs  lsp_data.rs  main.rs  server.rs
src/actions/: diagnostics.rs  format.rs  hover.rs  mod.rs  notifications.rs  post_build.rs  requests.rs
src/server/: mod.rs
src/test/: mod.rs
test_data/common/src/: main.rs
tests/: client.rs  tests.rs  tooltip.rs  translated.rs
tests/fixtures/: msgs.data
tests/support/: client.rs  io.rs  mod.rs  project_builder.rs
